<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_48sdp"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_welcome"
        android:textColor="@color/green_500"
        android:textSize="@dimen/_24ssp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginStart="@dimen/_16sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/green_500"
        android:alpha="0"
        tools:alpha="100"
        android:outlineAmbientShadowColor="@color/green_500"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome">

        <com.mazzampr.storyapps.utils.customview.CustomEmailEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:layout_gravity="start"
            android:paddingHorizontal="@dimen/_8sdp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_16sdp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/green_500"
        android:alpha="0"
        tools:alpha="100"
        android:outlineAmbientShadowColor="@color/green_500"
        app:layout_constraintTop_toBottomOf="@id/tl_email">

        <com.mazzampr.storyapps.utils.customview.CustomPasswordEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_8sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.mazzampr.storyapps.utils.customview.CustomButton
        android:id="@+id/btn_login"
        android:alpha="0"
        tools:alpha="100"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_info_register"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_16sdp"/>

    <LinearLayout
        android:id="@+id/linear_info_register"
        android:alpha="0"
        tools:alpha="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            android:textColor="@color/green_500"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center_horizontal"
            android:layout_marginStart="@dimen/_2sdp"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>